--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </p>
 
         <div class="social-media">
-          <a href="#"><i class="bx bxl-facebook"></i> </a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/razatechtube"><i class="bx bxl-facebook"></i> </a>
+          <a href="https://www.twitter.com/anasraza6096"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.instagram.com/anasraza6096"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="https://www.twitter.com/muhammdanasraza"><i class="bx bxl-linkedin"></i></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="./images/anas.png" class="btn">Download CV</a>
       </div>
       <div class="home-img">
         <img src="images/anas.png" alt="anasraza" />
