--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="#services">Sevices</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
+        <a href="help.html">Help</a>
       </nav>
     </header>
 
